--- a/src/Makefile.test_util.include
+++ b/src/Makefile.test_util.include
@@ -9,15 +9,19 @@ EXTRA_LIBRARIES += \
 
 TEST_UTIL_H = \
     test/util/blockfilter.h \
+    test/util/boost_test_boosts.h \
     test/util/chainstate.h \
     test/util/logging.h \
     test/util/mining.h \
     test/util/net.h \
+    test/util/pretty_data.h \
     test/util/script.h \
     test/util/setup_common.h \
     test/util/str.h \
+    test/util/traits.h \
     test/util/transaction_utils.h \
     test/util/validation.h \
+    test/util/vector.h \
     test/util/wallet.h
 
 libtest_util_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(MINIUPNPC_CPPFLAGS) $(NATPMP_CPPFLAGS) $(EVENT_CFLAGS) $(EVENT_PTHREADS_CFLAGS)
@@ -27,6 +31,7 @@ libtest_util_a_SOURCES = \
   test/util/logging.cpp \
   test/util/mining.cpp \
   test/util/net.cpp \
+  test/util/pretty_data.cpp \
   test/util/script.cpp \
   test/util/setup_common.cpp \
   test/util/str.cpp \
