--- a/src/Makefile.leveldb.include
+++ b/src/Makefile.leveldb.include
@@ -21,7 +21,10 @@ LEVELDB_CPPFLAGS_INT += -D__STDC_LIMIT_MACROS
 LEVELDB_CPPFLAGS_INT += -DHAVE_SNAPPY=0 -DHAVE_CRC32C=1
 LEVELDB_CPPFLAGS_INT += -DHAVE_FDATASYNC=@HAVE_FDATASYNC@
 LEVELDB_CPPFLAGS_INT += -DHAVE_FULLFSYNC=@HAVE_FULLFSYNC@
-LEVELDB_CPPFLAGS_INT += -DHAVE_O_CLOEXEC=@HAVE_O_CLOEXEC@
+if HAVE_O_CLOEXEC
+# LevelDB uses #ifdef for HAVE_O_CLOEXEC, so if not available, it needs to be not-defined
+LEVELDB_CPPFLAGS_INT += -DHAVE_O_CLOEXEC=1
+endif
 LEVELDB_CPPFLAGS_INT += -DFALLTHROUGH_INTENDED=[[fallthrough]]
 
 if WORDS_BIGENDIAN
