--- a/.dockerignore
+++ b/.dockerignore
@@ -28,7 +28,7 @@
 !/doc
 !/infra/bitcoin.conf.tmpl
 !/infra/configure-itcoin-core-dev.sh
-!/infra/create-keypair.sh
+!/infra/create-initdata.sh
 !/infra/entrypoint.sh
 !/infra/Makefile
 !/infra/render-template.sh
